[gd_scene load_steps=5 format=2]

[ext_resource path="res://graphics/wrench/Wrench2.glb" type="PackedScene" id=1]
[ext_resource path="res://graphics/wrench/Wrench1.glb" type="PackedScene" id=2]
[ext_resource path="res://source/player/wrench/WrenchProjectile.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.349547, 0.0721604, 1.43565 )

[node name="WrenchProjectile" type="RigidBody"]
collision_layer = 33
collision_mask = 32
continuous_cd = true
contacts_reported = 2
contact_monitor = true
script = ExtResource( 3 )

[node name="Wrench1" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -0.0976903, 0 )

[node name="Wrench2" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -0.0976903, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_WrenchProjectile_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
